--- a/stream/styles.css
+++ b/stream/styles.css
@@ -71,6 +71,12 @@ audio {
     margin: 0;
 }
 
+#samples {
+    margin-top: 20px;
+    text-align: center;
+    color: #4aa8db;
+}
+
 #warningMessage {
     margin-top: 20px;
     color: #ff6b6b;
